@@ -1114,13 +1114,13 @@
         <mod name="AppliedEnergistics"
             type="mods"
             description="Adds in a cool way of storing items electrically!"
-            version="rv14.finale"
+            version="rv14.finale3"
             website="http://ae-mod.info/"
             server="yes"
             optional="no"
-            url="packs/RedwoodServer/files/appeng-rv14-finale-mc16x.jar"
-            file="appeng-rv14-finale-mc16x.jar"
-            md5="1b8198bb21ddd7a5677432a37ab2840d"
+            url="packs/RedwoodServer/files//appeng-rv14-finale3-mc16x.jar"
+            file="appeng-rv14-finale3-mc16x.jar"
+            md5="d10ac60e48a192760e76c1de3b0c73ed"
             download="server"
             />
         <mod name="ExtraCells"
