@@ -1,4 +1,5 @@
 Updated:
+- AppliedEnergistics to rv14.finale3.
 - ArsMagicka2 to 1.1.1c.
 - Backpacks to 1.26.29.
 - Backtools to 2.0.1.
